--- a/css/style.css
+++ b/css/style.css
@@ -12,18 +12,33 @@
   align-content: center;
   font-weight: 320;
   margin: 0rem;
-  font-family: 'Courier New', Courier, monospace; }
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
 
 .btnPrincipal {
-  padding: 5px 10px;
+  padding: 6px 8px;
   border: 0;
-  border-radius: 2px;
+  border-radius: 3px;
   color: #000;
-  margin: 0.3rem;
   background-color: #fff;
-  max-height: 30px;
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-align: center;
+  border-style: none;
+  max-height: 40px; }
+
+.textoParrafo {
+  padding: 5px 10px;
+  border-radius: 2px;
   font-size: 1rem;
-  font-weight: 450; }
+  font-weight: 450;
+  justify-content: center;
+  display: flex;
+  align-items: center; }
+
+.textoFiltros {
+  font-size: 1rem;
+  color: #000;
+  padding: 0.1rem; }
 
 .btn-colorPrimario {
   color: #141D3C; }
@@ -62,25 +77,15 @@
     max-height: 300px;
     width: 100%;
     color: #000;
-    font-size: 0.75rem;
     display: flex;
-    text-align: center; }
+    text-align: center;
+    font-size: 0.75rem; }
+    .main .main__index .filtros h5 {
+      font-size: 1rem; }
     .main .main__index .filtros .filtro_1 {
       padding: 0.2rem; }
-      .main .main__index .filtros .filtro_1 h5 {
-        font-size: 1rem;
-        font-weight: 400; }
     .main .main__index .filtros .filtro_2 {
       padding: 0.2rem; }
-      .main .main__index .filtros .filtro_2 h5 {
-        font-size: 1rem;
-        font-weight: 400; }
-    .main .main__index .filtros button {
-      background-color: #ffffff;
-      border-radius: 0.5rem;
-      max-height: 3rem;
-      justify-content: center;
-      align-items: center; }
   .main .main__index .aside_container {
     display: flex;
     padding: 1rem;
@@ -107,17 +112,19 @@ header {
   border-radius: 20px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem; }
+  align-items: center; }
   .aside h3 {
     padding: 1.5rem;
     text-align: center;
     color: #ffffff; }
   .aside p {
-    text-align: initial; }
+    text-align: justify; }
   .aside a {
-    padding: 1.5rem;
-    text-align: center;
-    color: #ffffff; }
+    font-weight: 500;
+    text-decoration: none;
+    color: white;
+    bottom: 0.5rem;
+    padding: 0rem; }
 
 .container {
   width: 100%;
@@ -129,34 +136,34 @@ header {
   flex-wrap: wrap;
   justify-content: center;
   gap: 1.6rem;
-  overflow: hidden;
-  padding-top: 2rem; }
+  overflow: hidden; }
   .container .targeta {
     width: 100%;
     border-radius: 3px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.35);
     text-align: center;
-    transition: all 0.25s; }
+    transition: all 0.25s;
+    padding: 0.5rem;
+    max-width: 320px; }
     .container .targeta img {
       width: 15rem;
       height: auto;
-      width: 70%; }
+      width: 100%;
+      max-width: 250px; }
     .container .targeta h4 {
-      font-weight: 300;
-      font-size: 1.5rem;
-      font-family: 'Times New Roman', Times, serif;
-      color: #f8af40; }
+      font-weight: 450;
+      color: #f8af40;
+      font-size: 1.25rem; }
     .container .targeta p {
-      font-weight: 250;
-      padding: 1rem 1rem 1rem 1rem;
-      font-size: 1rem;
-      color: #ffffff; }
+      font-weight: 300;
+      color: colorNegro;
+      font-size: 1.12rem; }
     .container .targeta a {
       font-weight: 500;
       text-decoration: none;
-      color: #ffffff;
-      margin-bottom: 0.5rem;
-      padding: 1rem; }
+      color: white;
+      bottom: 0.5rem;
+      padding: 0rem; }
   .container .targeta:hover {
     transform: translateY(-15px);
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2); }
@@ -223,17 +230,6 @@ header {
       .main__registro .formularios .form .form_2 p {
         width: 100%;
         color: #000; }
-      .main__registro .formularios .form .form_2 .registrarse {
-        margin: 1rem;
-        padding: 0.5rem; }
-        .main__registro .formularios .form .form_2 .registrarse button {
-          font-size: 1.2rem;
-          padding: 0.5rem;
-          background-color: #ffffff;
-          border-radius: 0.3rem;
-          border-style: none;
-          font-weight: 500;
-          border: 0; }
 
 .main .mainContacto {
   display: flex;
@@ -328,44 +324,78 @@ header {
     .main .containerPerfil .mainPefil .mainPefil:hover {
       transform: scale(1.03); }
 
-.mainProducto {
-  padding: 0.5rem; }
-  .mainProducto .targetaPrecio {
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f8af40;
-    padding-bottom: 2rem; }
-    .mainProducto .targetaPrecio h2 {
-      font-size: 1.5rem;
-      width: 60%;
-      background-color: #9c1ede;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      border-radius: 20px; }
-    .mainProducto .targetaPrecio h3 {
-      font-size: 1rem; }
-    .mainProducto .targetaPrecio p {
-      font-size: 1rem;
-      padding: 0rem 2rem; }
-    .mainProducto .targetaPrecio img {
-      width: 80%; }
-  .mainProducto .filtrosProductos {
+.main {
+  grid-area: main;
+  background-color: #141D3C;
+  color: #ffffff;
+  justify-content: center;
+  margin-top: 0.3rem; }
+  .main .mainProducto .filtrosProductos {
     display: flex;
     justify-content: space-evenly;
-    align-items: center; }
-  .mainProducto .productos h1 {
-    font-size: 1rem;
-    color: #ffffff; }
+    align-items: center;
+    background-color: #f8af40;
+    margin-bottom: 0.3rem; }
+  .main .mainProducto .targetasProductos {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 300px, auto;
+    grid-template-areas: "header header header" "aside targetaPrecio targetaPrecio" "main   main   main" "footer footer footer";
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1.6rem;
+    overflow: hidden; }
+    .main .mainProducto .targetasProductos .asideProducto {
+      grid-template-areas: asideProducto;
+      padding: 1.5rem;
+      background-color: #02AFFE;
+      border-radius: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .main .mainProducto .targetasProductos .asideProducto h3 {
+        padding: 1.5rem;
+        text-align: center;
+        color: #ffffff; }
+      .main .mainProducto .targetasProductos .asideProducto p {
+        text-align: justify; }
+      .main .mainProducto .targetasProductos .asideProducto a {
+        font-weight: 500;
+        text-decoration: none;
+        color: white;
+        bottom: 0.5rem;
+        padding: 0rem; }
+    .main .mainProducto .targetasProductos .targetaPrecio {
+      width: 100%;
+      grid-area: targetaPrecio;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      background-color: #f8af40;
+      padding-bottom: 2rem; }
+      .main .mainProducto .targetasProductos .targetaPrecio h3 {
+        font-size: 1rem; }
+      .main .mainProducto .targetasProductos .targetaPrecio img {
+        width: 80%; }
+
+@media (max-width: 768px) {
+  .container {
+    display: flex;
+    grid-template-columns: 1fr;
+    max-height: none; } }
 
 @media (max-width: 700px) {
   .container {
     display: flex;
-    grid-template-columns: 1fr; } }
+    grid-template-columns: 1fr;
+    max-height: none; } }
+
+.aside_container {
+  padding: 1rem;
+  justify-content: space-evenly;
+  margin-bottom: 0.3rem; }
 
 @media (max-width: 576px) {
   .aside_container {
