--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -11,36 +11,28 @@
     justify-content: center;
     gap:1.6rem;
     overflow: hidden;
-    padding-top: 2rem;
     .targeta {
         width: 100%;
         border-radius: 3px;
         box-shadow: 0 2px 2px rgba(0, 0, 0, 0.35);
         text-align: center;
         transition: all 0.25s;
+        padding: 0.5rem;
+        max-width: 320px;
         img {
             width: 15rem;
             height: auto;
-            width: 70%;
+            width: 100%;
+            max-width: 250px;
         }
         h4 {
-            font-weight: 300;
-            font-size: 1.5rem;
-            font-family: 'Times New Roman', Times, serif;
-            color: $colorNaranjaGD;
+            @include textoPagina(450,#f8af40,1.25rem);
         }
         p {
-            font-weight: 250;
-            padding: 1rem 1rem 1rem 1rem;
-            font-size: 1rem;
-            color: $colorBlanco;
+            @include textoPagina(300,colorNegro,1.12rem);
         }
         a {
-            font-weight: 500;
-            text-decoration: none;
-            color: $colorBlanco;
-            margin-bottom: 0.5rem;
-            padding: 1rem;
+            @include propiedadesA(500,none,white,0.5rem,0rem);
         }
     }
     .targeta:hover {
