--- a/css/style.css
+++ b/css/style.css
@@ -333,28 +333,17 @@ header {
   width: 100%;
   display: flex;
   flex-direction: column;
-  text-align: center; }
+  text-align: center;
+  justify-content: center; }
   .mainProducto .filtrosProductos {
+    grid-area: filtrosProductos;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     background-color: #f8af40;
     margin-bottom: 0.3rem;
-    max-height: 300px; }
-  .mainProducto .targetaPrecio {
-    width: 100%;
-    grid-area: targetaPrecio;
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-    .mainProducto .targetaPrecio .targetaPrecio__container {
-      max-width: 400px;
-      background-color: #f8af40; }
-      .mainProducto .targetaPrecio .targetaPrecio__container h3 {
-        font-size: 1rem; }
-      .mainProducto .targetaPrecio .targetaPrecio__container img {
-        width: 100%;
-        border-radius: none; }
+    max-height: 300px;
+    padding: 0.5rem; }
   .mainProducto .asideProducto {
     width: 100%;
     max-height: 300px;
@@ -376,11 +365,38 @@ header {
       color: white;
       bottom: 0.5rem;
       padding: 0rem; }
+  .mainProducto .targetaPrecioContainer {
+    width: 100%; }
+    .mainProducto .targetaPrecioContainer .targetaPrecio {
+      background-color: lightcoral;
+      width: 100%;
+      display: flex;
+      flex-direction: row-reverse; }
+      .mainProducto .targetaPrecioContainer .targetaPrecio .textoPrecio {
+        display: flex;
+        grid-area: textoPrecio;
+        padding: 1rem;
+        width: 50%;
+        text-align: justify; }
+        .mainProducto .targetaPrecioContainer .targetaPrecio .textoPrecio h1 {
+          grid-area: "textoPrecio__h1"; }
+        .mainProducto .targetaPrecioContainer .targetaPrecio .textoPrecio p {
+          grid-area: parrafoPrecio;
+          width: 100%;
+          padding: 0;
+          margin: 15px 0px 15px 0px;
+          text-align: justify; }
+      .mainProducto .targetaPrecioContainer .targetaPrecio .carruselesPrecio {
+        grid-area: "carruselPrecio";
+        padding: 1rem;
+        width: 50%;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        max-width: 500px; }
   .mainProducto .targetasProductos {
     height: auto;
-    display: grid;
-    grid-template-columns: repeat(4fr 1fr);
-    grid-template-areas: "targetasProducto      targetasProductos     targetasProductos  targetasProductos";
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 1.6rem;
@@ -388,39 +404,50 @@ header {
     border: solid #000 1px;
     margin: 1rem;
     padding: 1rem; }
-  .mainProducto .targetaProducto {
-    max-width: 300px;
-    background-color: aquamarine;
-    border: #000 solid 1px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    text-align: center;
-    color: #000;
-    max-width: 54rem; }
-    .mainProducto .targetaProducto h4 {
-      font-size: 1rem; }
-    .mainProducto .targetaProducto img {
-      width: 100%; }
+    .mainProducto .targetasProductos .targetaProducto {
+      max-width: 300px;
+      background-color: transparent;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      text-align: center;
+      color: #ffffff;
+      max-width: 60rem; }
+      .mainProducto .targetasProductos .targetaProducto h4 {
+        font-size: 1rem; }
+      .mainProducto .targetasProductos .targetaProducto img {
+        width: 100%; }
 
 @media (max-width: 768px) {
   .container {
     display: flex;
     grid-template-columns: 1fr;
-    max-height: none; } }
+    max-height: none; }
+  .targetaPrecio {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    background-color: #000 !important; } }
 
 @media (max-width: 700px) {
   .container {
     display: flex;
     grid-template-columns: 1fr;
-    max-height: none; } }
-
-.aside_container {
-  padding: 1rem;
-  justify-content: space-evenly;
-  margin-bottom: 0.3rem; }
+    max-height: none; }
+  .aside_container {
+    padding: 1rem;
+    justify-content: space-evenly;
+    margin-bottom: 0.3rem; }
+  .targetaPrecio {
+    width: 70%;
+    display: flex;
+    background-color: green !important; } }
 
 @media (max-width: 576px) {
+  .targetaPrecio {
+    width: 70%;
+    display: flex;
+    background-color: #ddb6f1 !important; }
   .aside_container {
     flex-direction: column;
     justify-content: center;
