--- a/scss/_mainProducto.scss
+++ b/scss/_mainProducto.scss
@@ -1,50 +1,29 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
 .mainProducto {
     width: 100%;
     display: flex;
     flex-direction: column;
     text-align: center;
+    justify-content: center;
+
     .filtrosProductos {
+        grid-area: filtrosProductos;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
         background-color: $colorNaranjaGD;
         margin-bottom: 0.3rem;
-        max-height: 300px
+        max-height: 300px;
+        padding: 0.5rem;
     }
-    .targetaPrecio {
-        width: 100%;
-        grid-area: targetaPrecio;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        .targetaPrecio__container{
-            max-width: 400px;
-            background-color: $colorNaranjaGD;
-            h2 {
-                // font-size: 1.5rem;
-                // width: 60%;
-                // background-color: #9c1ede;
-                // display: flex;
-                // flex-direction: column;
-                // justify-content: center;
-                // align-items: center;
-                // border-radius: 20px;
-            }
-            h3 {
-                font-size: 1rem;
-            }
-            img {
-                width: 100%;
-                border-radius: none;
-            }
-        }
-    }
+
     .asideProducto {
+        // grid-area: asideProducto;
         width: 100%;
         max-height: 300px;
         padding: 1.5rem;
@@ -53,24 +32,73 @@
         flex-direction: column;
         align-items: center;
         border: solid #000 1px;
+
         h3 {
             padding: 1.5rem;
             text-align: center;
             color: $colorBlanco;
         }
+
         p {
             text-align: justify;
         }
+
         a {
             @include propiedadesA(500, none, white, 0.5rem, 0rem);
         }
     }
+
+    .targetaPrecioContainer {
+        width: 100%;
+        // width: 100%;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: center;
+        // background-color:green;
+        // align-items: center;
+        .targetaPrecio {
+            background-color: lightcoral;
+            width: 100%;
+            display: flex;
+            flex-direction: row-reverse;
+            // background-color: #000;
+            // width: 75%;
+            // display: flex;
+            // flex-direction: row-reverse;
+            .textoPrecio {
+                display: flex;
+                grid-area: textoPrecio;
+                padding: 1rem;
+                width: 50%;
+                text-align: justify;
+                h1 {
+                    grid-area: "textoPrecio__h1";
+                }
+                p {
+                    grid-area: parrafoPrecio;
+                    width: 100%;
+                    padding: 0;
+                    margin: 15px 0px 15px 0px;
+                    text-align: justify;
+                }
+            }
+            .carruselesPrecio {
+                grid-area: "carruselPrecio";
+                padding: 1rem;
+                width: 50%;
+                justify-content: center;
+                align-items: center;
+                align-content: center;
+                max-width: 500px;
+                .carouselExampleControls {}
+            }
+        }
+    }
+
+
     .targetasProductos {
         height: auto;
-        display: grid;
-        grid-template-columns: repeat(4fr 1fr);
-        grid-template-areas:
-            "targetasProducto      targetasProductos     targetasProductos  targetasProductos";
+        display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
         gap: 1.6rem;
@@ -78,24 +106,24 @@
         border: solid #000 1px;
         margin: 1rem;
         padding: 1rem;
-    }
-    .targetaProducto{
-        max-width: 300px;
-        background-color: aquamarine;
-        border: #000 solid 1px;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        text-align: center;
-        color: $colorNegro;
-        max-width: 54rem;
 
-        h4{
-            font-size: 1rem;
-        }
-        img{
-            width: 100%;
+        .targetaProducto {
+            max-width: 300px;
+            background-color: transparent;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            text-align: center;
+            color: $colorBlanco;
+            max-width: 60rem;
+
+            h4 {
+                font-size: 1rem;
+            }
+
+            img {
+                width: 100%;
+            }
         }
     }
-    
 }
