--- a/scss/_main_index.scss
+++ b/scss/_main_index.scss
@@ -25,7 +25,7 @@
                 padding: 0.2rem;
             }
         }
-        .aside_container {
+        .section_container {
             display: flex;
             padding: 1rem;
             justify-content: space-evenly;
