--- a/scss/_mainProducto.scss
+++ b/scss/_mainProducto.scss
@@ -22,7 +22,7 @@
         padding: 0.5rem;
     }
 
-    .asideProducto {
+    .sectionProducto {
         // grid-area: asideProducto;
         width: 100%;
         max-height: 300px;
@@ -48,81 +48,58 @@
         }
     }
 
-    .targetaPrecioContainer {
-        width: 100%;
-        // width: 100%;
-        // display: flex;
-        // flex-direction: column;
-        // justify-content: center;
-        // background-color:green;
-        // align-items: center;
+    .targetasPrecioContainer {
+        background-color: lightcoral;
         .targetaPrecio {
             background-color: lightcoral;
+            flex-direction: row;
+            align-items: center;    
             width: 100%;
-            display: flex;
-            flex-direction: row-reverse;
-            // background-color: #000;
-            // width: 75%;
-            // display: flex;
-            // flex-direction: row-reverse;
+            padding: 1rem;
             .textoPrecio {
+                width: 100%;
                 display: flex;
-                grid-area: textoPrecio;
-                padding: 1rem;
-                width: 50%;
+                flex-direction: column;
+                width: auto;
                 text-align: justify;
-                h1 {
-                    grid-area: "textoPrecio__h1";
-                }
-                p {
-                    grid-area: parrafoPrecio;
-                    width: 100%;
-                    padding: 0;
-                    margin: 15px 0px 15px 0px;
-                    text-align: justify;
-                }
-            }
-            .carruselesPrecio {
-                grid-area: "carruselPrecio";
-                padding: 1rem;
-                width: 50%;
-                justify-content: center;
                 align-items: center;
-                align-content: center;
-                max-width: 500px;
-                .carouselExampleControls {}
+                padding-top: 4rem;
+                h1{
+                    padding: 0;
+                    margin: 0;
+                }
+                h2{
+                    padding: 1rem 0 0 0 ;
+                }
+                p{
+                    padding: 1rem 0 0 0;
+                    margin: 0;
+                }
             }
         }
+
+        .carruselPrecio {
+            width: 100%;
+            padding: 1rem;
+        }
+
     }
 
-
     .targetasProductos {
-        height: auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        gap: 1.6rem;
-        overflow: hidden;
-        border: solid #000 1px;
-        margin: 1rem;
-        padding: 1rem;
+        width: 100%;
+        // display: grid;
+        // grid-template-columns: repeat(3fr 1r);
+        // grid-template-areas:"targetaProducto targetaProducto targetaProducto"
+        //                     "targetaProducto targetaProducto targetaProducto"
+        //                     "targetaProducto targetaProducto targetaProducto";
 
         .targetaProducto {
-            max-width: 300px;
-            background-color: transparent;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: wrap;
-            text-align: center;
-            color: $colorBlanco;
-            max-width: 60rem;
-
             h4 {
                 font-size: 1rem;
             }
 
             img {
-                width: 100%;
+                width: 70%;
             }
         }
     }
